# MITS

./: CMakeLists.txt  README.md
BKPWC/: BKPWC  CMakeLists.txt  README.md  instances_list.txt
BKPWC/instances/football/: random34_1.txt  random34_10.txt  random34_2.txt  random34_3.txt  random34_4.txt  random34_5.txt  random34_6.txt  random34_7.txt  random34_8.txt  random34_9.txt  random38_1.txt  random38_10.txt  random38_2.txt  random38_3.txt  random38_4.txt  random38_5.txt  random38_6.txt  random38_7.txt  random38_8.txt  random38_9.txt  random44_1.txt  random44_10.txt  random44_2.txt  random44_3.txt  random44_4.txt  random44_5.txt  random44_6.txt  random44_7.txt  random44_8.txt  random44_9.txt  random48_1.txt  random48_10.txt  random48_2.txt  random48_3.txt  random48_4.txt  random48_5.txt  random48_6.txt  random48_7.txt  random48_8.txt  random48_9.txt  (+10 more)
BKPWC/src/: MITS.h  main.cpp  tools.h
MCGPP/: CMakeLists.txt  MCGP  README.md  compile.sh
MCGPP/Instances/: instance_list_all.txt
MCGPP/Instances/pollster/: muestra1_20_3.txt  muestra1_30_4.txt  muestra1_40_5.txt  muestra1_50_6.txt  muestra1_55_6.txt  muestra2_20_3.txt  muestra2_30_4.txt  muestra2_40_5.txt  muestra2_50_6.txt  muestra2_55_6.txt  muestra3_20_3.txt  muestra3_30_4.txt  muestra3_40_5.txt  muestra3_50_6.txt  muestra3_55_6.txt  muestra4_20_3.txt  muestra4_30_4.txt  muestra4_40_5.txt  muestra4_50_6.txt  muestra4_55_6.txt  muestra5_20_3.txt  muestra5_30_4.txt  muestra5_40_5.txt  muestra5_50_6.txt  muestra5_55_6.txt
MCGPP/Instances/tsplib/: a280_05_2.txt  (+639 more)
MCGPP/src/: 1-MLWT_convergence.h  main.cpp  tools.h
(+2 files in other folders)
